# novel-writer

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
memory/: 2026-05-04.md
src/: App.css  App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: AIPanel.jsx  BookAnalyzer.jsx  ChapterEditor.jsx  ImportPanel.jsx  KnowledgePanel.jsx  NameGenerator.jsx  OutlinePanel.jsx  SearchPanel.jsx  SensitiveChecker.jsx  Sidebar.jsx  TemplatePanel.jsx  WordCounter.jsx
src/data/: sensitiveWords.js  templates.json
src/pages/: EditorPage.jsx  ProjectList.jsx  SettingsPage.jsx
src/stores/: useStore.js
src/utils/: ai.js
